Locking methods completely written and tests passing, now need to integrate the locking methods into the rest of the logic layer
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/trunk@3313 fdecad78-55fc-0310-b1b2-d7d25cf747c9